--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body {
-    background-color: powderblue;
+    background-color: black;
   }
   h1 {
-    color: blue;
+    color: white;
   }
   p {
     color: red;
