--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,67 @@
 body {
     background-color: black;
+    font-family: "Poppins", Bold;
+    margin: 0;
+    
   }
   h1 {
     color: white;
-    font-family: "Poppins", Bold;
+    
   }
   h2 {
     color: white;
-    font-family: "Poppins", Medium;
+    
   }
   h3 {
     color: white;
-    font-family: "Poppins", Regular;
+   
   }
 
   p {
     color: white;
-    font-family: "Poppins", Regular;
+    
 
   }
+
+  nav{
+    background-color: rgb(51, 51, 51);
+    height: 60px;
+    width: 100%;
+    padding:1%;
+  
+    
+
+  }
+
+  label.logo {
+    font-size: 35px;
+    font-weight: bold;
+    line-height:60px;
+    padding: 0 20px;
+    color: white;
+ 
+  }
+
+  nav ul{
+    float: right;
+    margin-right: 10px;
+    margin-right: 5%;
+    
+  }
+
+  nav ul li {
+    display:inline-block;
+    line-height: 35px;
+    margin: 0 30px;
+    
+  }
+
+  nav ul li a{
+    color:white;
+    text-decoration: none;
+  }
+
+
 
   .maintext{
     margin: auto;
