--- a/styles.css
+++ b/styles.css
@@ -81,3 +81,61 @@ body {
         width: auto;
         font-size: 150%;
         }
+
+
+
+
+  .maincontainer{
+ 
+    display: flex;
+
+  }
+
+  .sidebar{
+    border: 1px white solid;
+    padding: 35px;
+    flex: 0.4;
+  }
+
+ 
+
+  .sidebar li a{
+    
+    color: white;
+    line-height: 60px;
+    text-decoration: none;
+    
+    
+  }
+
+  .mcbox-2{
+    padding: 35px;
+    background-color: rgb(26, 26, 26);
+    border: 1px white solid;
+    flex:2;
+  }
+  .mcboxwidget1{
+
+    background-color: rgb(0, 0, 0);
+    border: 1px white solid;
+    flex:2;
+    margin-bottom: 5%;
+  }
+
+  .mcboxwidget2{
+
+    background-color: rgb(0, 0, 0);
+    width: 50%;
+    border: 1px white solid;
+    margin-bottom: 5%;
+  
+  
+  }
+
+  .mcboxwidget3{
+    width: 50%;
+    background-color: rgb(0, 0, 0);
+    border: 1px white solid;
+    margin-bottom: 5%;
+  
+  }
